comments from Stanislav, TestResultService fix